--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@nestjs/core": "^11.0.14",
     "@nestjs/platform-express": "^11.0.14",
     "@nestjs/swagger": "^11.1.1",
+    "@nestjs/typeorm": "^11.0.0",
+    "class-validator": "^0.14.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1",
