Modularizing all tables

--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.0.14",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.14",
     "@nestjs/platform-express": "^11.0.14",
     "@nestjs/swagger": "^11.1.1",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/joi": "^17.2.2",
     "class-validator": "^0.14.1",
+    "joi": "^17.13.3",
+    "pg": "^8.14.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1",
